CRUD Nintendo e refatoração do código